hub/manifests/hub/02-hub-tunnel-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-tunnel-orchestrator-orchestrate
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-tunnel-orchestrator-orchestrate
  template:
    metadata:
      labels:
        app: hub-tunnel-orchestrator-orchestrate
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-tunnel-orchestrator-orchestrate
          image: gcr.io/traefiklabs/hub-tunnel-orchestrator:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - orchestrate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-tunnel-orchestrator
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-tunnel-orchestrator
  template:
    metadata:
      labels:
        app: hub-tunnel-orchestrator
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-tunnel-orchestrator
          image: gcr.io/traefiklabs/hub-tunnel-orchestrator:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: hub-tunnel-orchestrator
  namespace: hub
  labels:
    app: hub-tunnel-orchestrator
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: hub-tunnel-orchestrator
    - port: 40000
      targetPort: 40000
      name: hub-tunnel-orchestrator-debug
  selector:
    app: hub-tunnel-orchestrator

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-brokers-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/tunnel/brokers`)
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-brokers
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/tunnel/brokers`)
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-external-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/tunnel/external`)
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-external
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/tunnel/external`)
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-internal-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/tunnel/internal`)
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-internal
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/tunnel/internal`)
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-agent
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/tunnel-endpoints`) || PathPrefix(`/agent/edge-ingresses`))
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: auth-token
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel-agent-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/tunnel-endpoints`) || PathPrefix(`/agent/edge-ingresses`))
      services:
        - name: hub-tunnel-orchestrator
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default
