hub/manifests/hub/03-hub-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-ui
  namespace: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub-ui
  template:
    metadata:
      labels:
        app: hub-ui
        version: "v1"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: hub-ui
          image: gcr.io/traefiklabs/hub-ui:dev
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: hub-ui
  namespace: hub
  labels:
    app: hub-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: hub-ui
  selector:
    app: hub-ui

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hub-ui
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`webapp.docker.localhost`)
      services:
        - name: hub-ui
          port: 80
  tls:
    certResolver: default
