hub/manifests/hub/04-git-proxy.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform-index-push
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Method(`POST`) && Path(`/{repo:.+}/git-receive-pack`)
      services:
        - name: hub-topology-indexer-api
          passHostHeader: false
          port: 80
      middlewares:
        - name: push-indexer-prefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform-index-push-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && Method(`POST`) && Path(`/{repo:.+}/git-receive-pack`)
      services:
        - name: hub-topology-indexer-api
          passHostHeader: false
          port: 80
      middlewares:
        - name: push-indexer-prefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform
  namespace: hub
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`)
      middlewares:
        - name: auth
        - name: git-strip-prefix
        - name: git-token
      services:
        - name: hub-git
          namespace: git
          passHostHeader: false
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform-tls
  namespace: hub
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`)
      services:
        - name: hub-git
          namespace: git
          passHostHeader: false
          port: 80
      middlewares:
        - name: auth
        - name: git-strip-prefix
        - name: git-token
  tls:
    certResolver: default
